 * The Javadoc API documentation for the source code.  This is not
   distributed with Daikon, but you can build it by executing the command
     make -C $DAIKONDIR/java javadoc
   It is also available at http://plse.cs.washington.edu/daikon/download/api/ .

===========================================================================

5.5.0 (February 2017)

Kvasir:
- --with-daikon is now the default, use --no-with-daikon to turn off

DynComp:
- --no-cset-file option has been removed, this is now the default

===========================================================================

5.4.6 (January 3, 2017)

The changes in this release reflect an increased emphasis on using the
DynComp tool for both Java and C/C++.

Daikon:
- Several improvements to the DynComp for Java tool, including:
  - support for multi-threaded programs
  - improved support for user programs that throw exceptions
  - recover gracefully from methods too large to instrument

Documentation:
- Simplified and improved the Installation chapter of the User Guide.
- Modified the Example usage chapter of the User Guide to more accurately
  describe the tool options and expected outputs.

===========================================================================

5.4.4 (December 2, 2016)

- Fixed calculation of a class's fields to include fields of its superclass(es).
- Corrected files included in daikon.tar to support building the documents.
- Corrected behavior of the calc_possible_invs configuration option.

===========================================================================

5.4.2 (November 3, 2016)

Fixed numerous DynComp bugs.

===========================================================================

5.4.0 (October 4, 2016)

daikon.jar now includes Apache Commons BCEL 6.0; previously it used a
locally-modified version of BCEL.  We have removed the "--default-bcel"
command-line option; Daikon will fail if some other version of BCEL is
found on the classpath.
